Mvvm Structure Complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
-  <string name="app_name">Addet</string>
-  <string name="start">start</string>
-
+  <string name="app_name">Addect</string>
+  <string name="start">Start</string>
+  <string name="achievements">Achievements</string>
+  <string name="leader_boards">LeaderBoards</string>
+  <string name="like_us">Like us? Give us a 5 star rating!</string>
+  <string name="rate">Rate</string>
+  <string name="cancel">Cancel</string>
+  <string name="yes">Yes</string>
+  <string name="no">No</string>
+  <string name="get_ready">Get Ready!</string>
 </resources>
